# archery

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cli/: CMakeLists.txt
cli/include/: cli.hpp
cli/src/: main.cpp
core/: CMakeLists.txt
core/include/: arch_package.hpp  arch_package_parsing_state.hpp  arch_parser.hpp  archery.hpp
core/src/: arch_parser.cpp  core.cpp  database.cpp
gui/: CMakeLists.txt
gui/src/: main.cpp
